overflow fixed

--- a/css/about-us/about-us.css
+++ b/css/about-us/about-us.css
@@ -1,3 +1,7 @@
+body{
+    overflow-x: hidden;
+}
+
 .our-team-container {
   width: 100%;
   background-color: #eff2f1;
