--- a/css/contact/contact.css
+++ b/css/contact/contact.css
@@ -1,3 +1,7 @@
+body{
+  overflow-y: hidden;
+}
+
 main {
   display: flex;
   flex-direction: column;
