--- a/css/shop/hero.css
+++ b/css/shop/hero.css
@@ -1,3 +1,7 @@
+body{
+    overflow-x: hidden;
+}
+
 .hero{
     width: 100%;
     background-color: #3b5d50;
